# metal_raft

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md
core/: Cargo.toml  README.md
core/src/: clock.rs  event.rs  lib.rs  log_entry.rs  node_state.rs  observer.rs  raft_messages.rs  raft_node.rs  raft_node_builder.rs  snapshot.rs  state_machine.rs  storage.rs  timer_service.rs  transport.rs  types.rs
core/tests/: config_change_manager_tests.rs  election_manager_tests.rs  leader_lease_tests.rs  log_replication_manager_tests.rs  message_handler_tests.rs  role_transition_manager_tests.rs  snapshot_manager_tests.rs
docs/: DYNAMIC_MEMBERSHIP_IMPLEMENTATION_PLAN.md  FUTURE_ARCHITECTURE.md  ISSUES_AND_LIMITATIONS.md
docs/adrs/: ADR-R1 Technology-Agnostic Algorithmic Core.md  ADR-R2 Crash-Stop Failure Model.md  ADR-R3 Deterministic, Imperative Test Harness.md  ADR-R4 Explicit Separation of Safety and Liveness.md  ADR-R5 Monomorphization-First Architecture.md
embassy/: Cargo.toml  README.md  build.rs  config.json  memory.x
embassy-sim/: Cargo.toml  README.md
embassy-sim/.cargo/: config.toml
embassy-sim/scripts/: run_channel.ps1
embassy-sim/src/: config.rs  embassy_observer.rs  embassy_state_machine.rs  embassy_storage.rs  embassy_timer.rs  led_state.rs  lib.rs  logging.rs
embassy-sim/src/collections/: embassy_config_change_collection.rs  embassy_map_collection.rs  embassy_node_collection.rs  mod.rs
embassy-sim/src/transport/: mod.rs
embassy-sim/src/transport/channel/: mod.rs  transport.rs
embassy-sim/src/transport/udp/: config.rs  driver.rs  serde_raft_message.rs  setup.rs  transport.rs
embassy/scripts/: run_channel_in_memory.ps1  run_udp.ps1  run_udp_semihosting.ps1
embassy/src/: cancellation_token.rs  client_channel_hub.rs  cluster.rs  config.rs  embassy_node.rs  embassy_observer.rs  embassy_state_machine.rs  embassy_storage.rs  embassy_timer.rs  heap.rs  lib.rs  main.rs  raft_client.rs  time_driver.rs
scripts/: run_all_tests.ps1
sim/: Cargo.toml
sim/src/: in_memory_config_change_collection.rs  lib.rs  (+8 more)
test-utils/: Cargo.toml
validation/: Cargo.toml  README.md
(+140 files in other folders)
