[workspace]
resolver = "2"
members = [
    "core",
    "sim",
    "embassy-sim",
]

[workspace.dependencies]
async-trait = "0.1.89"
indexmap = "2.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tokio-stream = { version = "0.1.17", features = ["net"] }
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

raft-core = { path = "core" }
raft-sim = { path = "sim" }
