[package]
name = "raft-embassy-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
raft-core = { path = "../core" }

# Embassy core - Cortex-M with custom time driver
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"], default-features = false }
embassy-time = { version = "0.5", features = ["generic-queue-8", "tick-hz-1_000"] }
embassy-time-driver = { version = "0.2.1" }
embassy-sync = "0.7.2"
embassy-futures = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"], default-features = false }
postcard = { version = "1.0", features = ["alloc"] }

# Utilities
heapless = "0.9.2"
defmt = "1.0.1"

# Embedded essentials
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = "0.6"
embedded-alloc = "0.7.0"
critical-section = "1.2.0"

# Networking (optional, for udp-transport feature)
embassy-net = { version = "0.8.0", features = ["udp", "dhcpv4", "medium-ethernet", "proto-ipv4"], optional = true }
embassy-net-driver = { version = "0.2", optional = true }
smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4"], optional = true }

[features]
default = ["udp-transport"]
channel-transport = []
udp-transport = ["embassy-net", "embassy-net-driver", "smoltcp"]

[[bin]]
name = "embassy-sim"
path = "src/main.rs"
